[gd_scene load_steps=6 format=3 uid="uid://fbn51egkvhig"]

[ext_resource type="Script" path="res://hud.gd" id="1_dyqnu"]
[ext_resource type="FontFile" uid="uid://c5dyxj6vnerry" path="res://fonts/Xolonium-Regular.ttf" id="2_vunbr"]

[sub_resource type="InputEventAction" id="InputEventAction_5bkvo"]
action = &"start_game"

[sub_resource type="Shortcut" id="Shortcut_831lo"]
events = [SubResource("InputEventAction_5bkvo")]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cba07"]
size = Vector2(210, 110)

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_dyqnu")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -136.5
offset_right = 136.5
offset_bottom = 78.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_vunbr")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -120.0
offset_right = 240.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_vunbr")
theme_override_font_sizes/font_size = 64
text = "Kaç Kaçabilirsen!"
horizontal_alignment = 1
autowrap_mode = 2

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -140.0
offset_right = 100.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_vunbr")
theme_override_font_sizes/font_size = 64
shortcut = SubResource("Shortcut_831lo")
text = "Başla"

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
z_index = 1
position = Vector2(240, 632)
shape = SubResource("RectangleShape2D_cba07")
visibility_mode = 1

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="TouchScreenButton" to="." method="_on_touch_screen_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
